Recipe First Push

--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <html>
-  
-  <head>
-  	<link rel="stylesheet" href="style.css">
-  </head>
-  
-  <body>
+
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+
+  <main>
+
+    <section>
+
+      <div class="titleOfFood">
+
+        Great <u>Canadian</u> HEINZ Ketchup Cake
+
+      </div>
+
+    </section>
+
+    <section class="imageOfCake">
+
+      <img src="ketchupcake.jpg" alt="Ketchup Cake">
+
+    </section>
+
+    <section>
+
+      <div class="ingredients">Ingredients</div>
+
+      <ul class="one">item</ul>
+
+    </section>
+
     
-  </body>
-  
+  </main>
+</body>
+
 </html>
