--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <div class="titleOfFood">
 
-        Great <u>Canadian</u> HEINZ Ketchup Cake
+        <h2>Great <u>Canadian</u> HEINZ Ketchup Cake</h2>
 
       </div>
 
@@ -27,13 +27,90 @@
 
     <section>
 
-      <div class="ingredients">Ingredients</div>
 
-      <ul class="one">item</ul>
+      <u>
+        <h1>~ Ingredients ~</h1>
+      </u>
+
+      <ul>
+
+        <li>2 cups all-purpose four</li>
+        <li>2 teaspoons baking powder</li>
+        <li>1 1/2 teaspoons of cinnamon</li>
+        <li>1 teaspoon baking soda</li>
+        <li>1/2 teaspoon ground nutmeg</li>
+        <li>1/2 teaspoon ground ginger</li>
+        <li>1/2 cup Heinz Tomato Ketchup</li>
+        <li>1/2 Cup Water</li>
+        <li>2 Tablespoons red food colouring</li>
+        <li>3/4 cup butter, softened</li>
+        <li>1 1/2 cups packed dark brown sugar</li>
+        <li>2 eggs</li>
+
+      </ul>
+
+      <u>
+        <h1>~ Frosting ~</h1>
+      </u>
+
+      <ul>
+
+        <li>6 ounces brick-style cream cheese, softened</li>
+        <li>3/4 cup butter, softened</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>4 cups icing sugar</li>
+
+      </ul>
 
     </section>
 
-    
+    <section>
+
+      <u>
+        <h1>Directions</h1>
+      </u>
+
+
+      <ul>
+
+        <li>Preheat the oven to 350 degrees F (180 degrees C). Grease two 9-inch (23 cm) round cake pans and line the
+          bottoms with parchment paper. Stir the flour with the baking powder, cinnamon, baking soda, nutmeg and ginger
+          into a bowl. Stir the ketchup, water and colouring in a separate bowl. Set aside.</li>
+
+        <br>
+
+        <li>Beat the butter and blend in the sugar in a large bowl until smooth. Beat in the eggs. Add the flour mixture
+          and ketchup mixture. Beat on low, scraping down the bowl as needed, until combined. Increase the speed to
+          medium-high and beat for 1 minute. Divide the batter evenly between the prepared pans. Bake for 30 minutes or
+          until the centre springs back when touched lightly. Cool the cakes for 15 minutes before turning onto a rack
+          to cool completely.</li>
+
+        <br>
+
+        <li>Frosting: Beat the cream cheese, butter and vanilla on medium speed for 2 minutes or until smooth. Gradually
+          beat in the sugar on low, scraping the bowl as needed. Beat on high until fluffy. Frost between the cake
+          layers and over the sides and top of the cake. Makes 12 servings.</li>
+
+        <br>
+
+      </ul>
+
+    </section>
+
+    <section>
+      <p align="center">
+
+        <!-- ^^^ This shows up as incorrect however this is actually correct. The align attribute is a perfectly good attribute. Not sure why this occurs. -->
+
+        <iframe width="800px" height="450px" src="https://www.youtube.com/embed/PqI2o3QXpHI" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </p>
+    </section>
+
+
+
+
+
   </main>
 </body>
 
